# nustar_singlelaser

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  translate_psd.py
interpolators/: baseline_interpolator.pkl  phase_diff_interpolator.pkl  sine_amp_interpolator.pkl  x_amp_diff_0to1_interpolator.pkl  x_amp_diff_1to0_interpolator.pkl  y_amp_diff_0to1_interpolator.pkl
licenses/: LICENSE.rst
nustar_singlelaser/: __init__.py  create_singlelaser_files.py  translate_psd.py
nustar_singlelaser/interpolators/: sine_mean_interpolator.pkl  translation_angle_interpolator.pkl
singlelaser/: __init__.py  caldb.py  create_singlelaser_files.py  fit_2dgauss.py  laser_trends.py  translate_psd.py  version.py
singlelaser/interpolators/: baseline_interpolator.pkl  y_amp_diff_1to0_interpolator.pkl
singlelaser/interpolators/archive/: baseline_interpolator_20250206.pkl  x_amp_diff_1to0_interpolator_20230202.pkl  y_amp_diff_0to1_interpolator_20230202.pkl  y_amp_diff_1to0_interpolator_20230202.pkl
singlelaser/notebooks/: Update Laser Splines.ipynb
