[metadata]
name = nustar_singlelaser
author = Hannah Earnshaw
author_email = hpearn@caltech.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = Code for approximating mast aspect reconstruction using a single metrology laser.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = hpearnshaw/nustar_singlelaser

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy
    scipy
    astropy
    dill

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
nustar_singlelaser = interpolators/*

[tool:pytest]
testpaths = "nustar_singlelaser" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    nustar_singlelaser/_astropy_init*
    nustar_singlelaser/conftest.py
    nustar_singlelaser/*setup_package*
    nustar_singlelaser/tests/*
    nustar_singlelaser/*/tests/*
    nustar_singlelaser/extern/*
    nustar_singlelaser/version*
    */nustar_singlelaser/_astropy_init*
    */nustar_singlelaser/conftest.py
    */nustar_singlelaser/*setup_package*
    */nustar_singlelaser/tests/*
    */nustar_singlelaser/*/tests/*
    */nustar_singlelaser/extern/*
    */nustar_singlelaser/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
