[ah_bootstrap]
auto_use = True

[metadata]
name = singlelaser
author = Hannah Earnshaw
author_email = hpearn@caltech.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/hpearnshaw/nustar_singlelaser
description = Approximate mast aspect reconstruction using a single metrology laser.
long_description = file: README.md
long_description_content_type = text/x-rst
edit_on_github = False
github_project = hpearnshaw/nustar_singlelaser
version = 0.1dev

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 
    numpy
    scipy
    astropy
    dill

[entry_points]
create_singlelaser_files = singlelaser.create_singlelaser_files:main

[package_data]
nustar_singlelaser = interpolators/*
